--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>عرض صور حفلة النجاح</title>
+    <title>إنشاء عرض تقديمي ببساطة</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
@@ -1253,7 +1252,7 @@ function loadDefaultSettings() {
     volumeValue.textContent = '50%';
 
     // إعدادات التذييل الافتراضية
-    footerTextInput.value = 'حفل تخرجنا 2024';
+    footerTextInput.value = 'موقعك لإنشاء عرضك التقديمي | اكتب مدرستك واسمك';
     footerTextColorInput.value = '#FFFFFF';
     footerBgColorInput.value = '#000000';
     updateFooter();
@@ -1268,11 +1267,14 @@ function loadDefaultSettings() {
     addStudent("اسم الطالب", "العبارة التحفيزية | صورة احتواء", "student1.jpg", "circle");
     addStudent("اسم الطالب", "عبارة تحفيزية | صورة مستطيلة 4*6", "student2.jpg", "rectangle");
 
-    addTextSlide("تهانينا!", "نتمنى لكم دوام التوفيق والنجاح. هذه شريحة نصية");
+    addTextSlide("تهانينا!", "اصنع عرضك التقديمي ببساطة. هذه شريحة نصية");
+        addTextSlide("تهانينا!", "اصنع عرضك التقديمي ببساطة.خلفية صورة وصوتية. صور وتعليق، رسائل نصية.");
+    addTextSlide("تهانينا!", "اصنع عرضك التقديمي ببساطة.خلفية بصورة وصوتية. صور وتعليق، رسائل نصية.");
+    addTextSlide(" ولد نسختك النهائية من عرضك!", "صدر نسخة للحفظ والتعديل باستيرادها.");
     addTextSlide("ألف مبروك التخرج!", "نفخر بإنجازاتكم ونتمنى لكم كل التوفيق في مسيرتكم القادمة.");
 
     addImage('photo1.jpg', 'تعلم وإلى العلياء تقدم', 'العلم نور | صورة كاملة');
-    addImage('photo2.jpg', 'تعلم وإلى العلياء تقدم', 'العلم نور | صورة كاملة');
+    addImage('photo2.jpg', 'العلم طريقنا للمستقبل', 'العلم نور | صورة كاملة');
 
     slideDurationInput.value = 5; // إعادة ضبط المدة الافتراضية
     updateSlidesList();
