--- a/index.html
+++ b/index.html
@@ -2760,6 +2760,16 @@ addImageBtn.addEventListener('click', () => {
 
 });
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WS9PJMD8F0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WS9PJMD8F0');
+</script>
+
     </script>
 </body>
 </html>
